[gd_scene load_steps=13 format=3 uid="uid://ctnf0hdhjmtso"]

[ext_resource type="Theme" uid="uid://ceno50mosps8a" path="res://scenes/ui/game_ui_theme.tres" id="1_7ck5g"]
[ext_resource type="Texture2D" uid="uid://m25s0bfwng2o" path="res://Assets/game/Objects/Basic_tools_and_meterials.png" id="2_17uwj"]
[ext_resource type="Script" uid="uid://c26pkyogiqnv3" path="res://scenes/ui/inventory_panel.gd" id="2_b11k6"]
[ext_resource type="Texture2D" uid="uid://b04v3girxr0wd" path="res://Assets/game/Objects/Basic_Plants.png" id="3_cvy6a"]
[ext_resource type="Texture2D" uid="uid://qpg7jtl5pivj" path="res://Assets/game/Objects/Egg_item.png" id="4_lcq1t"]
[ext_resource type="Texture2D" uid="uid://bbdt4i4j2gx45" path="res://Assets/game/Objects/Simple_Milk_and_grass_item.png" id="5_b11k6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cvy6a"]
atlas = ExtResource("2_17uwj")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_17uwj"]
atlas = ExtResource("2_17uwj")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta3uk"]
atlas = ExtResource("3_cvy6a")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcq1t"]
atlas = ExtResource("3_cvy6a")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdvod"]
atlas = ExtResource("4_lcq1t")

[sub_resource type="AtlasTexture" id="AtlasTexture_4tgr1"]
atlas = ExtResource("5_b11k6")
region = Rect2(32, 0, 16, 16)

[node name="InventoryPanel" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_7ck5g")
theme_type_variation = &"DarkWoodPanel"
script = ExtResource("2_b11k6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Logs" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Logs"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_cvy6a")

[node name="LogLabel" type="Label" parent="MarginContainer/VBoxContainer/Logs"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="stone" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/stone"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_17uwj")

[node name="stoneLabel" type="Label" parent="MarginContainer/VBoxContainer/stone"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="corn" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/corn"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_ta3uk")

[node name="cornLabel" type="Label" parent="MarginContainer/VBoxContainer/corn"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="tomato" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/tomato"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_lcq1t")

[node name="tomatoLabel" type="Label" parent="MarginContainer/VBoxContainer/tomato"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="egg" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/egg"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_tdvod")

[node name="eggLabel" type="Label" parent="MarginContainer/VBoxContainer/egg"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="milk" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/milk"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_4tgr1")

[node name="milkLabel" type="Label" parent="MarginContainer/VBoxContainer/milk"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"
